--- a/payroll.html
+++ b/payroll.html
@@ -1,194 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Payroll Program</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Factorial & Natural Numbers</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Marcellus&display=swap" rel="stylesheet">
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Marcellus&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Quicksand', sans-serif;
-      background-color: #1E1E2E;
-      color: #E6E6FA;
-      text-align: center;
-      overflow-x: hidden;
-    }
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Quicksand', sans-serif;
+    background-color: #1E1E2E;
+    color: #E6E6FA;
+    text-align: center;
+    overflow-x: hidden;
+  }
 
-    h1 {
-      font-family: 'Marcellus', serif;
-      font-size: 2.6em;
-      color: #8AB4F8;
-      margin: 40px 0 20px;
-      text-shadow: 1px 1px 2px rgba(230,230,250,0.5);
-    }
+  /* Floating clouds */
+  .cloud {
+    position: absolute;
+    top: 20%;
+    left: -200px;
+    width: 200px;
+    height: 100px;
+    background: rgba(255,255,255,0.8);
+    border-radius: 100px;
+    animation: float 60s linear infinite;
+    filter: blur(2px);
+  }
+  .cloud::before, .cloud::after {
+    content: '';
+    position: absolute;
+    background: rgba(255,255,255,0.8);
+    border-radius: 50%;
+  }
+  .cloud::before {
+    width: 100px; height: 80px;
+    top: -20px; left: 30px;
+  }
+  .cloud::after {
+    width: 120px; height: 90px;
+    top: 10px; left: 90px;
+  }
+  @keyframes float {
+    from { transform: translateX(0); }
+    to { transform: translateX(120vw); }
+  }
 
-    .input-controls {
-      background-color: #2a2a3a;
-      border-radius: 16px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      padding: 20px;
-      width: 90%;
-      max-width: 500px;
-      margin: 0 auto 40px;
-    }
-    .input-controls label {
-      display: inline-block;
-      width: 140px;
-      text-align: right;
-      margin-right: 10px;
-      color: #E6E6FA;
-    }
-    .input-controls input {
-      padding: 6px;
-      border-radius: 8px;
-      border: 1px solid #444;
-      width: 180px;
-      margin-bottom: 10px;
-      font-size: 1em;
-      background-color: #1E1E2E;
-      color: #E6E6FA;
-    }
-    .input-controls button {
-      background-color: #8AB4F8;
-      color: #1E1E2E;
-      border: none;
-      border-radius: 10px;
-      padding: 8px 14px;
-      margin: 5px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      font-weight: 600;
-    }
-    .input-controls button:hover {
-      background-color: #6faaf8;
-      transform: translateY(-3px);
-    }
+  /* Title */
+  h1 {
+    font-family: 'Marcellus', serif;
+    font-size: 2.5em;
+    color: #8AB4F8;
+    margin-top: 80px;
+    text-shadow: 1px 1px 2px rgba(230,230,250,0.7);
+  }
 
-    table {
-      border-collapse: collapse;
-      width: 90%;
-      max-width: 800px;
-      margin: 0 auto 40px;
-      background-color: #2a2a3a;
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 6px 10px rgba(0,0,0,0.3);
-    }
-    th, td {
-      padding: 10px;
-      border: 1px solid #444;
-      color: #E6E6FA;
-    }
-    thead {
-      background-color: #8AB4F8;
-      color: #1E1E2E;
-      font-weight: 600;
-    }
-    tfoot {
-      background-color: #444;
-      font-weight: bold;
-    }
-    td.ndata {
-      text-align: right;
-    }
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    padding: 40px;
+  }
 
-    .links-container {
-      margin-bottom: 40px;
-    }
-    .links-container a {
-      text-decoration: none;
-      background-color: #8AB4F8;
-      color: #1E1E2E;
-      padding: 12px 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.3);
-      transition: all 0.3s ease;
-      font-weight: 600;
-    }
-    .links-container a:hover {
-      background-color: #6faaf8;
-      transform: translateY(-3px);
-    }
+  .card {
+    background-color: #2a2a38;
+    border-radius: 20px;
+    box-shadow: 0 6px 12px rgba(0,0,0,0.4);
+    width: 320px;
+    padding: 25px;
+    text-align: center;
+    animation: fadeIn 1.5s ease forwards;
+    opacity: 0;
+  }
 
-    footer {
-      font-size: 0.9em;
-      color: #888;
-      margin-bottom: 30px;
-    }
-  </style>
+  @keyframes fadeIn {
+    0% { opacity: 0; transform: translateY(20px); }
+    100% { opacity: 1; transform: translateY(0); }
+  }
+
+  .card h2 {
+    font-family: 'Marcellus', serif;
+    color: #8AB4F8;
+    font-size: 1.4em;
+    margin-bottom: 15px;
+  }
+
+  .icon {
+    font-size: 2.2em;
+    margin-bottom: 10px;
+    color: #8AB4F8;
+  }
+
+  input {
+    width: 80%;
+    padding: 8px;
+    margin: 6px 0;
+    border: 1px solid #444;
+    border-radius: 8px;
+    font-size: 1em;
+    text-align: center;
+    background-color: #1E1E2E;
+    color: #E6E6FA;
+  }
+
+  button {
+    background-color: #8AB4F8;
+    border: none;
+    color: #1E1E2E;
+    padding: 10px 16px;
+    margin: 6px 4px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-weight: 600;
+  }
+
+  button:hover {
+    background-color: #6faef8;
+    transform: translateY(-3px);
+  }
+
+  .back-home {
+    display: inline-block;
+    margin: 30px auto 60px;
+    text-decoration: none;
+    background-color: #8AB4F8;
+    color: #1E1E2E;
+    padding: 12px 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.4);
+    transition: all 0.3s ease;
+    font-weight: 600;
+  }
+
+  .back-home:hover {
+    background-color: #6faef8;
+    transform: translateY(-4px);
+  }
+
+</style>
 </head>
 
 <body>
-  <h1>The Payroll Program</h1>
+  <!-- Floating clouds -->
+  <div class="cloud" style="top:10%;animation-delay:0s;"></div>
+  <div class="cloud" style="top:30%;animation-delay:20s;opacity:0.9;"></div>
+  <div class="cloud" style="top:50%;animation-delay:40s;opacity:0.8;"></div>
 
-  <div class="input-controls">
-    <label for="name">Employee Name:</label>
-    <input id="name" name="name" type="text" value="New Employee"><br>
-    <label for="days_worked">Days Worked:</label>
-    <input id="days_worked" name="days_worked" type="number" value="5"><br>
-    <label for="daily_rate">Daily Rate:</label>
-    <input id="daily_rate" name="daily_rate" type="number" value="100.00"><br>
-    <label for="deduct">Deduction Amount:</label>
-    <input id="deduct" name="deduct" type="number" value="50.00"><br>
-    <button onclick="addEmployee()">+ Add Employee</button>
-    <button onclick="deleteEmployee()">- Delete by No.</button>
+  <h1>Factorial & Natural Numbers ➗➕∑</h1>
+
+  <div class="card-container">
+    <!-- Factorial -->
+    <div class="card">
+      <div class="icon">➗</div>
+      <h2>Factorial (While Loop)</h2>
+      <label>Enter a number:</label><br>
+      <input id="n1" type="number"><br>
+      <button onclick="computeFactorial()">Compute</button>
+      <button onclick="clearFactorial()">Clear</button><br>
+      <label>Factorial:</label><br>
+      <input id="factorial" type="number" readonly>
+    </div>
+
+    <!-- Sum -->
+    <div class="card">
+      <div class="icon">➕</div>
+      <h2>Sum (Do While Loop)</h2>
+      <label>Enter a number:</label><br>
+      <input id="n2" type="number"><br>
+      <button onclick="computeSum()">Compute</button>
+      <button onclick="clearSum()">Clear</button><br>
+      <label>Sum:</label><br>
+      <input id="sum" type="number" readonly>
+    </div>
+
+    <!-- Average -->
+    <div class="card">
+      <div class="icon">∑</div>
+      <h2>Average (For Loop)</h2>
+      <label>Enter a number:</label><br>
+      <input id="n3" type="number"><br>
+      <button onclick="computeAverage()">Compute</button>
+      <button onclick="clearAverage()">Clear</button><br>
+      <label>Average:</label><br>
+      <input id="average" type="number" readonly>
+    </div>
   </div>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Emp. No.</th>
-        <th>Employee Name</th>
-        <th>Days Worked</th>
-        <th>Daily Rate</th>
-        <th>Gross Pay</th>
-        <th>Deductions</th>
-        <th>Net Pay</th>
-      </tr>
-    </thead>
-    <tbody id="payroll-body">
-      <tr>
-        <td class="ndata">1</td>
-        <td>John Van Neumann</td>
-        <td class="ndata">3</td>
-        <td class="ndata">500.00</td>
-        <td class="ndata">1500.00</td>
-        <td class="ndata">300</td>
-        <td class="ndata">1200</td>
-      </tr>
-      <tr>
-        <td class="ndata">2</td>
-        <td>Charles W. Babbage</td>
-        <td class="ndata">4</td>
-        <td class="ndata">500.00</td>
-        <td class="ndata">2000.00</td>
-        <td class="ndata">500</td>
-        <td class="ndata">1500</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td>Total</td><td></td><td></td><td></td>
-        <td id="gross-total" class="ndata">3500.00</td>
-        <td id="deduct-total" class="ndata">800.00</td>
-        <td id="net-total" class="ndata">2700.00</td>
-      </tr>
-    </tfoot>
-  </table>
-
-  <div class="links-container">
-    <a href="index.html">Back to Home Page</a>
-  </div>
+  <a class="back-home" href="index.html">⬅ Back to Home Page</a>
 
   <script>
-  </script>
+    function computeFactorial() {
+      let i = document.getElementById("n1").value * 1;
+      let result = 1;
+      while (i > 1) {
+        result *= i;
+        i--;
+      }
+      document.getElementById("factorial").value = result;
+    }
 
-  <footer>
-    &copy; 2025 Polancos Pogi
-  </footer>
+    function computeSum() {
+      let j = document.getElementById("n2").value * 1;
+      let result = 0;
+      let a = 1;
+      do {
+        result += a;
+        a++;
+      } while (a <= j);
+      document.getElementById("sum").value = result;
+    }
+
+    function computeAverage() {
+      let k = document.getElementById("n3").value * 1;
+      let result = 0;
+      for (let b = 1; b <= k; b++) {
+        result += b;
+      }
+      let average = result / k;
+      document.getElementById("average").value = average.toFixed(2);
+    }
+
+    function clearFactorial() {
+      document.getElementById("n1").value = '';
+      document.getElementById("factorial").value = '';
+    }
+    function clearSum() {
+      document.getElementById("n2").value = '';
+      document.getElementById("sum").value = '';
+    }
+    function clearAverage() {
+      document.getElementById("n3").value = '';
+      document.getElementById("average").value = '';
+    }
+  </script>
 </body>
 </html>
