--- a/factorial.html
+++ b/factorial.html
@@ -52,7 +52,7 @@
 
   /* Title */
   h1 {
-    font-family: "Inter", sans-serif;
+    font-family: Arial;
     font-size: 2.5em;
     color: #8AB4F8;
     margin-top: 80px;
@@ -84,7 +84,7 @@
   }
 
   .card h2 {
-    font-family: 'Marcellus', serif;
+    font-family: Arial;
     color: #8AB4F8;
     font-size: 1.4em;
     margin-bottom: 15px;
@@ -241,3 +241,4 @@
   </script>
 </body>
 </html>
+
