--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
             font-size: 1.1em;
             margin: 0;
             padding: 30px;
-            background-color: #0f172a; /* Deep navy background */
-            color: #e2e8f0; /* Soft gray text */
+            background-color: #0f172a; 
+            color: #e2e8f0; 
         }
 
         h1 {
             font-size: 3em;
-            color: #38bdf8; /* Aqua blue accent */
+            color: #38bdf8; 
             margin-bottom: 5px;
         }
 
         h2 {
             font-size: 1.8em;
-            color: #94a3b8; /* Muted light gray-blue */
+            color: #94a3b8; 
             margin-top: 5px;
             margin-bottom: 20px;
         }
@@ -32,7 +32,7 @@
             display: block;
             margin-bottom: 30px;
             font-size: 1.2em;
-            color: #a5f3fc; /* Soft cyan tone */
+            color: #a5f3fc; 
         }
 
         .links-container {
@@ -46,7 +46,7 @@
 
         .links-container a {
             padding: 12px 18px;
-            background-color: #2563eb; /* Blue button */
+            background-color: #2563eb; 
             color: white;
             text-decoration: none;
             border-radius: 8px;
@@ -55,7 +55,7 @@
         }
 
         .links-container a:hover {
-            background-color: #38bdf8; /* Aqua hover */
+            background-color: #38bdf8;
             color: #0f172a;
             transform: translateY(-3px);
         }
@@ -80,3 +80,4 @@
     </div>
 </body>
 </html>
+
